###########################################################
## TARGETS
###########################################################

add_executable(eventfd eventfd.c)

###########################################################
## COMMON
###########################################################

target_link_libraries(eventfd ipc-bench-common)
