###########################################################
## TARGETS
###########################################################

add_executable(pipes pipes.c)

###########################################################
## COMMON
###########################################################

target_link_libraries(pipes ipc-bench-common)
