###########################################################
## TARGETS
###########################################################

add_executable(pipe pipe.c)

###########################################################
## COMMON
###########################################################

target_link_libraries(pipe ipc-bench-common)
